--- a/templates/index.html
+++ b/templates/index.html
@@ -218,7 +218,7 @@
 }
 
 /* --- Mobile Responsive CSS --- */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 600px) {
     body {
         background-position: center center;
     }
@@ -359,6 +359,20 @@
 <div class="popup-tip float3" style="bottom: 300px; right: 270px;">🤖 I'm always listening!</div>
 <div class="popup-tip float2" style="top: 60px; right: 30px;">💡 Ask for ideas, tips, help, or fun facts!</div>
 <div class="popup-tip float1" style="top: 270px; right: 330px;">✨ Try asking “What can you do?”</div>
+
+<script>
+  window.onload = function () {
+    // Only hide on mobile (screen width <= 768px)
+    if (window.innerWidth <= 768) {
+      setTimeout(() => {
+        document.querySelectorAll('.popup-tip').forEach(popup => {
+          popup.style.display = 'none';
+        });
+      }, 8000); // Hide after 8 seconds
+    }
+  };
+</script>
+
 
 <footer id="copyright">© 2025 Eswar Boyi. All rights reserved.</footer>
 
